# life_helper

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/db/: __init__.py  models.py  session.py
app/migrations/: env.py
app/migrations/versions/: 0001_initial.py  0002_list_view_messages.py  0003_list_banned_members.py  0004_party_finance.py  0005_expense_categories.py  0006_shopping_categories_receipts.py  0007_expense_category_default_split.py  0008_checklist_categories.py
app/services/: __init__.py  access.py  errors.py  shopping.py  tokens.py
app/tgbot/: handlers.py  keyboards.py  middleware.py  states.py  texts.py
tests/: conftest.py  test_config.py  test_handlers.py  test_keyboards.py  test_migrations.py  test_public_access.py  test_shopping_service.py
