[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "life-helper"
version = "0.1.0"
description = "Personal Telegram life helper bot. First module: shared shopping lists."
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "aiogram>=3.16,<4.0",
    "SQLAlchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "alembic>=1.13,<2.0",
]

[project.optional-dependencies]
dev = [
    "aiosqlite>=0.20,<1.0",
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<2.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
